# pbi-agent

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  GCP-VERTEX-ANTHROPIC-DOC.md  GCP-VERTEX-GEMINI-DOC.md  GCP-VERTEX-OPENAI-MAAS-DOC.md  GCP-VERTEX-XAI-DOCy.md  LIST_TOOLS.md  MEMORY.md  OpenCode.html  PLAN.md  PROMPT-CREATE-REPORT.md  README.md  REVIEW.md  TELEGRAM-DOC.md  TODO.md  basedpyright-analysis.md  main.py  package-lock.json  package.json  pbi-agent.html  plan.md  pyproject.toml  skills-lock.json  todo.md
.agents/: code-reviewer.md
.agents/agents/: code-quality-reviewer.md  code-reviewer.md  committer.md  confidence-checker.md  explorer.md  fixer.md  orchestrator.md  planner.md  reviewer.md  worker.md
.agents/commands/: check-confidence.md  code-quality-review.md  commit.md  create-task.md  execute.md  fix-review.md  orchestrate.md  plan-interactive.md  plan.md  refine-task.md  release.md  retrospective.md  review.md  ship-task.md
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.github/workflows/: deploy-docs.yml  publish.yml  release.yml  tests.yml
.release-notes/: github-v0.22.0.md  pr-v0.22.0.md
OpenCode_files/: index-BDu-Rt9a.css  index-URR9Y1jb.js.download
docs/: cli.md  customization.md  environment.md  index.md  installation.md  introduction.md  kanban-dashboard.md  model-profiles.md  providers.md  sandbox.md  session-commands.md  speech-to-text.md  tools.md  web-ui-working-items-grouping-plan.md  web-ui.md
docs/.vitepress/: config.ts
docs/changelog/: index.md  v0.0.33.md  v0.1.0.md  v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.20.0.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.24.0.md  v0.25.0.md  v0.26.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v0.9.1.md  v0.9.2.md
docs/customization/: commands.md  file-constraints.md  hooks.md  index.md  instructions.md  mcp.md  project-rules.md  reload.md  skills.md  sub-agents.md
docs/guide/: audit.md  customization.md  index.md  installation.md  providers.md
docs/reference/: cli.md  environment.md  tools.md
pbi-agent_files/: index-BlWHe-d_.css  index-CR3x1glU.js.download  index-De1r3VQs.js.download  index-b_2POzRm.js.download
scripts/: dead_code.py  generate_api_types.py
src/pbi_agent/: __init__.py  __main__.py  branding.py  cli.py  config.py  display.py  extensions.py  frontmatter.py  init_agents.py  (+9 more)
tests/: conftest.py  test_anthropic_provider.py  test_api_types_codegen.py  test_apply_diff.py  test_apply_patch_tool.py  test_ask_user_tool.py  test_chat_app_bindings.py  test_chat_app_commands.py  test_chat_input.py  test_cli.py  test_command_registry.py  test_console_display.py  test_display_formatting.py  test_error_formatting.py  test_explore_workspace_tool.py  test_extensions.py  test_file_edit_tools.py  test_find_files_tool.py  test_frontmatter.py  test_generic_provider.py  test_github_copilot_auth_provider.py  test_github_copilot_config.py  test_github_copilot_provider.py  test_google_gcp_provider.py  test_google_provider.py  test_hooks_api.py  test_hooks_core.py  test_hooks_tool_runtime.py  test_init_agents.py  test_init_command.py  test_init_report_tool.py  test_input_mentions.py  test_internal_config.py  test_list_files_tool.py  test_log_config.py  test_maintenance.py  test_mcp_discovery.py  test_mcp_pool.py  test_media.py  test_model_discovery.py  (+39 more)
webapp/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+2943 files in other folders)
