[project]
name = "pbi-agent"
version = "0.0.4"
description = "Multi-provider LLM CLI agent for editing Power BI reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.2.2",
    "textual==8.0.2",
    "textual-dev==1.8.0",
]

[project.scripts]
pbi-agent = "pbi_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi_agent"]

# Include all non-Python template files bundled under pbi_agent/report/.
[tool.hatch.build.targets.wheel.force-include]
"src/pbi_agent/agent/AUDIT-TODO.md" = "pbi_agent/agent/AUDIT-TODO.md"
"src/pbi_agent/web/templates" = "pbi_agent/web/templates"
"src/pbi_agent/web/static" = "pbi_agent/web/static"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: slow tests",
    "integration: integration tests",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.2",
]
