[project]
name = "pbi-agent"
version = "0.0.17"
description = "Multi-provider LLM CLI agent for editing Power BI reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastexcel==0.19.0",
    "polars==1.39.0",
    "pypdf==6.9.1",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "textual==8.0.2",
    "textual-dev==1.8.0",
]

[project.scripts]
pbi-agent = "pbi_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi_agent"]

# Non-Python files inside packages are included automatically when they are
# tracked by git (hatchling default behaviour).  Only add force-include
# entries for assets that live *outside* the packages listed above.

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: slow tests",
    "integration: integration tests",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
]
