[project]
name = "pbi-agent"
version = "0.0.25"
description = "Multi-provider lightweight local coding agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.4",
    "fastapi==0.135.2",
    "mcp==1.26.0",
    "pandas[excel]==3.0.1",
    "pyarrow==23.0.1",
    "pypdf==6.10.2",
    "python-dotenv==1.2.2",
    "python-docx==1.2.0",
    "rich==14.3.3",
    "uvicorn[standard]==0.43.0",
]

[project.scripts]
pbi-agent = "pbi_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi_agent"]

# Non-Python files inside packages are included automatically when they are
# tracked by git (hatchling default behaviour).  Only add force-include
# entries for assets that live *outside* the packages listed above.

[tool.fastapi]
entrypoint = "pbi_agent.web.serve:app"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: slow tests",
    "integration: integration tests",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff==0.15.7",
]
